added detail page api call, styling, etc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<div class="main-content"><landing></landing></div>
+<mat-toolbar>
+  <span>Cocktail Genie</span>
+</mat-toolbar>
+<div class="main-content"><router-outlet></router-outlet></div>
