--- a/src/app/cocktail-detail/cocktail-detail.component.scss
+++ b/src/app/cocktail-detail/cocktail-detail.component.scss
@@ -1,3 +1,25 @@
+.back-link {
+  display: inline-block;
+  align-items: center;
+  background-color: var(--primary-interaction);
+  padding: 15px 20px 15px 15px;
+  position: relative;
+  border-radius: var(--border-radius);
+
+  &:hover {
+    background-color: var(--primary-interaction-hover);
+  }
+
+  &:active {
+    background-color: var(--primary-interaction-active);
+  }
+}
+
+.link-container {
+  display: flex;
+  align-items: center;
+}
+
 .spinner {
   display: flex;
   align-items: center;
@@ -17,4 +39,31 @@
 a {
   text-decoration: none;
   color: black;
+}
+
+.detail {
+  padding-top: 0px;
+}
+
+.instructions {
+}
+
+.cocktail-image {
+  border-radius: var(--border-radius);
+  width: 550px;
+  height: 550px;
+}
+
+@media (max-width: 600px) {
+  .cocktail-image {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 450px) {
+  .cocktail-image {
+    width: 200px;
+    height: 200px;
+  }
 }
