--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,13 +19,15 @@ $cocktail-app-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$cocktail-app-theme: mat.define-light-theme((
-  color: (
-    primary: $cocktail-app-primary,
-    accent: $cocktail-app-accent,
-    warn: $cocktail-app-warn,
+$cocktail-app-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $cocktail-app-primary,
+      accent: $cocktail-app-accent,
+      warn: $cocktail-app-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,5 +36,20 @@ $cocktail-app-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+:root {
+  --spacing: 20px;
+  --border-radius: 8px;
+  --primary-surface: #dedada;
+  --primary-interaction: #dedada;
+  --primary-interaction-hover: #cdcbcb;
+  --primary-interaction-active: #b0b0b0;
+}
