--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar>
-  <span>Cocktail Genie</span>
+  <a routerLink="">Cocktail Genie</a>
 </mat-toolbar>
 <div class="main-content"><router-outlet></router-outlet></div>
