--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar>
-  <a routerLink="">Cocktail Genie</a>
+  <div routerLink="" role="button" class="home-link">Cocktail Genie</div>
 </mat-toolbar>
 <div class="main-content"><router-outlet></router-outlet></div>
