--- a/src/app/cocktail-detail/cocktail-detail.component.scss
+++ b/src/app/cocktail-detail/cocktail-detail.component.scss
@@ -29,6 +29,9 @@
 .content {
   display: flex;
   flex-flow: row wrap;
+  background-color: #212121;
+  padding: 20px;
+  border-radius: var(--border-radius);
 }
 
 .primary {
@@ -44,9 +47,6 @@ a {
 
 .detail {
   padding-top: 0px;
-}
-
-.instructions {
 }
 
 .cocktail-image {
