--- a/src/app/cocktails/cocktails.component.html
+++ b/src/app/cocktails/cocktails.component.html
@@ -1,15 +1,17 @@
 <div>
-  <mat-form-field>
-    <mat-label>Select alcohol</mat-label>
-    <mat-select
-      [value]="cocktailService.alcohol()"
-      (valueChange)="cocktailService.alcohol.set($event)"
+  <div class="form">
+    <mat-form-field>
+      <mat-label>Select alcohol</mat-label>
+      <mat-select
+        [value]="cocktailService.alcohol()"
+        (valueChange)="cocktailService.alcohol.set($event)"
+      >
+        @for (alcohol of alcoholList; track alcohol) {
+        <mat-option [value]="alcohol">{{ alcohol }}</mat-option>
+        }
+      </mat-select></mat-form-field
     >
-      @for (alcohol of alcoholList; track alcohol) {
-      <mat-option [value]="alcohol">{{ alcohol }}</mat-option>
-      }
-    </mat-select></mat-form-field
-  >
+  </div>
 
   @if (cocktailService.drinksList().length) {
   <cocktails-result-grid></cocktails-result-grid>
