--- a/src/app/pages/cocktail-detail-page/cocktail-detail-page.component.scss
+++ b/src/app/pages/cocktail-detail-page/cocktail-detail-page.component.scss
@@ -1,18 +1,12 @@
-.back-link {
-  display: inline-block;
+.header {
+  display: flex;
   align-items: center;
-  background-color: var(--primary-interaction);
-  padding: 15px 20px 15px 15px;
-  position: relative;
-  border-radius: var(--border-radius);
+  justify-content: space-between;
+}
 
-  &:hover {
-    background-color: var(--primary-interaction-hover);
-  }
-
-  &:active {
-    background-color: var(--primary-interaction-active);
-  }
+.header-title-back {
+  display: flex;
+  align-items: center;
 }
 
 .link-container {
@@ -62,7 +56,7 @@ a {
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
   .cocktail-image {
     width: 200px;
     height: 200px;
