--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,10 @@ $my-theme: mat.define-dark-theme(
 
 :root {
   --color-primary: mat-color($primary, default);
+  --primary-color: mat-color($primary, default);
+  //--primary-interaction-hover: mat-color($primary, default)
   --border-radius: 12px;
+  --spacing: 10px;
 }
 
 html,
